Revert "Fix long string splitting bugs"
This reverts commit 0603fc8e2eae59a260b78536ebbca1ae0ee84657.

Testing to see if this is the cause of a major 'match' bug.

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "Mischa Spiegelmock <revmischa@cpan.org>",
     "Justin Gallardo <justin.gallardo@gmail.com>",
     "Chris Nehren <cnehren@pobox.com>",
-    "Henri Niemeläinen <aivot-on@iki.fi>",
-    "Alex Miles <ghostaldev@gmail.com>"
+    "Henri Niemeläinen <aivot-on@iki.fi>"
   ],
   "repository": {
     "type": "git",
